[package]
name = "crabdropper-cli"
version = "0.1.2"
edition = "2021"
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/Coca162/crabdropper-cli"
categories = ["command-line-utilities"]
keywords = ["x11", "color-picker", "cli", "utility", "color"]
description = " A simple color picker made in rust for the CLI!"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
screenshots = "0.4.6"
device_query = { version = "1.1.2", optional = true }
mouce = { version = "0.2.41", optional = true }
termcolor = "1.2.0"
copypasta-ext = { version = "0.4.1", default-features = false }

[features]
default = ["device_query", "x11-fork"]
device_query = ["dep:device_query"]
mouce = ["dep:mouce"]
x11-fork = ["copypasta-ext/x11-fork"]
x11-bin = ["copypasta-ext/x11-bin"]
