[package]
name = "crabdropper-cli"
version = "0.2.2"
edition = "2021"
license = "AGPL-3.0-only"
readme = "README.md"
repository = "https://github.com/Coca162/crabdropper-cli"
categories = ["command-line-utilities"]
keywords = ["x11", "color-picker", "cli", "utility", "color"]
description = " A simple color picker made in rust for the CLI!"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24.5", default-features = false, features = ["png"] }
screenshots = "0.5.2"
device_query = { version = "1.1.2", optional = true }
mouce = { version = "0.2.41", optional = true }
termcolor = "1.2.0"
copypasta-ext = { version = "0.4.1", default-features = false, features = ["x11-fork", "x11-bin"] }

[features]
default = ["device_query"]
device_query = ["dep:device_query"]
mouce = ["dep:mouce"]
